@@ -1,6 +1,6 @@
-/**
+/*
  * The MIT License
- * Copyright (c) 2014-2016 Ilkka Seppälä
+ * Copyright © 2014-2019 Ilkka Seppälä
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -20,6 +20,7 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package com.iluwatar.hexagonal.domain;
 
 import com.google.inject.Guice;
@@ -32,14 +33,9 @@ import com.iluwatar.hexagonal.test.LotteryTestUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 
 /**
  * 
@@ -75,13 +71,13 @@ class LotteryTest {
     
     // players submit the lottery tickets
     Optional<LotteryTicketId> ticket1 = service.submitTicket(LotteryTestUtils.createLotteryTicket("cvt@bbb.com",
-        "123-12312", "+32425255", new HashSet<>(Arrays.asList(1, 2, 3, 4))));
+        "123-12312", "+32425255", Set.of(1, 2, 3, 4)));
     assertTrue(ticket1.isPresent());
     Optional<LotteryTicketId> ticket2 = service.submitTicket(LotteryTestUtils.createLotteryTicket("ant@bac.com",
-        "123-12312", "+32423455", new HashSet<>(Arrays.asList(11, 12, 13, 14))));
+        "123-12312", "+32423455", Set.of(11, 12, 13, 14)));
     assertTrue(ticket2.isPresent());
     Optional<LotteryTicketId> ticket3 = service.submitTicket(LotteryTestUtils.createLotteryTicket("arg@boo.com",
-        "123-12312", "+32421255", new HashSet<>(Arrays.asList(6, 8, 13, 19))));
+        "123-12312", "+32421255", Set.of(6, 8, 13, 19)));
     assertTrue(ticket3.isPresent());
     assertEquals(3, administration.getAllSubmittedTickets().size());
     
